radix-engine-tests/tests/dec_macros/src/pdec_err_overflow_3.stderr
error: The number is too large to fit in a precise decimal.
 --> src/pdec_err_overflow_3.rs:5:15
  |
5 |         pdec!(57896044618658097711785492504343953926634.992332820282019728792003956564819968);
  |               ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
